--- a/htmlCssJs/03_htmlTable실습.html
+++ b/htmlCssJs/03_htmlTable실습.html
@@ -172,26 +172,42 @@
             <tr>
                 <td rowspan="2">커피류</td>
                 <td>아메리카노</td>
-                <td>가격</td>
-                <td>이미지</td>
+                <td>4200 원</td>
+                <td>
+                    <a href="https://www.starbucks.co.kr/menu/drink_view.do?product_cd=9200000000038">
+                        <img src="./[110563]_20210426095937808.jpg" alt="coffe" width="100px">
+                    </a>
+                </td>
             </tr>
             <tr>
                 <!-- <td>구분</td> -->
-                <td>음료</td>
-                <td>가격</td>
-                <td>이미지</td>
+                <td>돌체라떼</td>
+                <td>4800 원</td>
+                <td>
+                    <a href="https://www.starbucks.co.kr/menu/drink_view.do?product_cd=128692">
+                        <img src="./dolche.jpg" alt="dolche" width="100px">
+                    </a>
+                </td>
             </tr>
             <tr>
                 <td rowspan="2">주스류</td>
-                <td>음료</td>
-                <td>가격</td>
-                <td>이미지</td>
+                <td>자바칩 프라푸치노</td>
+                <td rowspan="2">5000 원</td>
+                <td>
+                    <a href="https://www.starbucks.co.kr/menu/drink_view.do?product_cd=168016">
+                        <img src="./javachip.jpg" alt="javachip" width="100px">
+                    </a>
+                </td>
             </tr>
             <tr>
                 <!-- <td>구분</td> -->
-                <td>음료</td>
-                <td>가격</td>
-                <td>이미지</td>
+                <td>녹차 프라푸치노</td>
+                <!-- <td>5000 원</td> -->
+                <td>
+                    <a href="https://www.starbucks.co.kr/menu/drink_view.do?product_cd=9200000002502">
+                        <img src="./[9200000002502]_20210426100408183.jpg" alt="greentea" width="100px">
+                    </a>
+                </td>
             </tr>
         </tbody>
     </table>
