study : css, 복합선택자, 가상클래스 선택자

--- a/htmlCssJs/test/04_cssTest.html
+++ b/htmlCssJs/test/04_cssTest.html
@@ -39,7 +39,64 @@
             <li>5</li>
         </ol>
 
+<br />
+<br />
+<br />
+
+    <h2>20230914_실습_복합선택자 연습하기</h2>
+        <h1>복합선택자  사용 연습</h1>
+        <p>동물원에 왔어요</p>
+        <div class="zoo">
+            <ul>
+                <span>여긴 사파리!</span>
+                <li>곰</li>
+                <li id="tiger">호랑이</li>
+                <li>팬더</li>
+                <span class="lion">사자1</span>
+                <li class="lion">사자1</span>
+                <li>사육사 lily</li>
+                <li>사육사 sean</li>
+            </ul>
+            <span class="lion">사파리 밖의 사자</span>
+        </div>
+        <hr />
+        <p class="lion">야생의 사자</p>
+
+
+<br />
+<br />
+<br />
+
+    <h2>20230914_실습_가상클래스 선택자</h2>
+
+    <input type="text">
+
+    <h1>가상클래스</h1>
+    <a href="https://www.naver.com/">안녕</a>
+
+
+<br />
+<br />
+<br />
+
+    <h2>20230914_줄무늬 만들기</h2>
+    
+    <div class="stripes">
+        <div>navy</div>
+        <div>yellow</div>
+        <div>navy</div>
+        <div>yellow</div>
+        <div>navy</div>
+        <div>yellow</div>
+        <div>navy</div>
+        <div>yellow</div>
+        <div>navy</div>
+        <div>yellow</div>
+    </div>
 
 
 </body>
 </html>
+
+
+
