--- a/htmlCssJs/04_css2.html
+++ b/htmlCssJs/04_css2.html
@@ -13,8 +13,38 @@
     <p class="orange bg-red">p.orange hello</p>
     <p id="red">p#red hello</p>
 
+
+<br />
+<!-- 선택자 -->
+
     <div>
-        <span class="" id="list_1">list 1</span>
+        <ul>
+            <li class="apple">사과</li>
+            <li>딸기</li>
+            <li>오렌지</li>
+        </ul>
+        <span class="apple">사과</span>
     </div>
+    <span class="apple">사과</span>
+
+    <section>
+        <ul>
+            <li class="apple">사과</li>
+            <li>딸기</li>
+            <li>오렌지</li>
+        </ul>
+        <h1>농장</h1>
+        <ul>
+            <li class="apple">사과</li>
+            <li>딸기</li>
+            <li>오렌지</li>
+        </ul>
+        <ul>
+            <li class="apple">사과</li>
+            <li>딸기</li>
+            <li>오렌지</li>
+        </ul>
+    </section>
+
 </body>
 </html>
