--- a/htmlCssJs/test/html/13_js_for_test.html
+++ b/htmlCssJs/test/html/13_js_for_test.html
@@ -44,30 +44,32 @@
         //배열에서의 for문
     
         let numbers = []
-        for(let i = 1; i <=100; i++){
+        for(let i = 1; i <=10; i++){
             numbers.push(i)
             // 배열(numbers)의 마지막에
             //인자로 넘어간 값(i)를 추가
         }
+        console.log(numbers)
 
-        let sum1 = 0;
-        let sum2 = 0;
-        let sum3 = 0;
 
-        for(i=0; i<numbers.length; i++){
-            sum1 += numbers[i]
-        }
-        console.log(sum1);
+        // let sum1 = 0;
+        // let sum2 = 0;
+        // let sum3 = 0;
 
-        for(let num of numbers) {
-            sum2 += num;
-        }
-        console.log(sum2);
+        // for(i=0; i<numbers.length; i++){
+        //     sum1 += numbers[i]
+        // }
+        // console.log(sum1);
 
-        numbers.forEach(function(num){
-            sum3 += num;
-        })
-        console.log(sum3);
+        // for(let num of numbers) {
+        //     sum2 += num;
+        // }
+        // console.log(sum2);
+
+        // numbers.forEach(function(num){
+        //     sum3 += num;
+        // })
+        // console.log(sum3);
 
     </script>
 </body>
