study: js_dom_jquery

--- a/htmlCssJs/test/html/headerTest.html
+++ b/htmlCssJs/test/html/headerTest.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flexbox 마스터1</title>
 
-    <link rel="stylesheet" href="/test/css/headerTest.css" />
+    <link rel="stylesheet" href="/sesac-ys-2/htmlCssJs/test/css/headerTest.css" />
     <style>
       h4 {
         text-align: center;
