--- a/htmlCssJs/html/17_jquery.html
+++ b/htmlCssJs/html/17_jquery.html
@@ -31,28 +31,33 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="box red"></div>
-        <div class="box orange"></div>
-        <div class="box yellow"></div>
-
-    </div>
-
     <input type="text" name="name" id="input" value="yeonju"/>
-    <button type="button" onclick="useVal()">vla() 사용하기</button>
+    <button type="button" onclick="useVal()">val() 사용하기</button>
     <button type="button" onclick="useAttr()">attr() 사용하기</button>
+
+
     <br />
 
     <span id="span1">hello</span>
     <button type="button" onclick="useCss()">css 사용하기</button>
     <button type="button" onclick="useText()">text() 사용하기</button>
+
+    <div class="container">
+        <div class="box red"></div>
+        <div class="box orange"></div>
+        <div class="box yellow"></div>
+    </div>
+    <button type="button" onclick="useAppend()">append() 사용하기</button>
+    <button type="button" onclick="useRemove()">remove() 사용하기</button>
+    <button type="button" onclick="useParent()">요소 탐색하기</button>
+    <button type="button" onclick="controlClass()">클래스 조작하기</button>
+
     <script>
 
 
         // $("선택자").동작함수();
         // document.get~~~ / document.querySelector~~~
         // 요소  .innerHTML / append()   제이쿼리는 다 함수 속성이 없다. 
-
 
         function useVal() {
             // id 가 input인 태그를 선택하여, 그 input의 value를 가져오는 코드
@@ -68,13 +73,20 @@
 
         function useCss() {
             // .css() : style을 변경
-            $("#span1").css("color", "blue");
+            const span = $("#span1")
+            span.css("font-size", "30px");
+            span.css("color", "blue");
+            // $("#span1").css("color", "blue");
+
+            // js 코드로 한다면?
+            // const span = document.getElementById("span1");
+            // span.style = "font-size: 30px; color: blue;" 
         }
 
         function useAttr() {
-            $("#input").val("");  //기본값 초기화 (위에 값을 넣어줘서 기본값이 존재하는 상태이므로)
-            $("#input").attr("placeholder", "이름을 입력하세요");
-            // js :  setAttributes()
+            $("#input").val("");   //기본값 초기화 (위에 값을 넣어줘서 기본값이 존재하는 상태이므로)
+            $("#input").attr("placeholder", "이름을 입력하세요.");
+            // js : setAttributes()
         }
 
         function useText() {
@@ -86,7 +98,55 @@
 
         }
 
-        function useAppend
+        // 자주쓰임!!!!
+        function useAppend() {
+            // const container2 = document.querySelector(".container");
+            // const newBox = document.createElement("div");
+            // newBox.className = "box red";
+            // container2.append(newBox);
+
+            // .container의 마지막 자식으로 추가
+            $(".container").append(`<div class="box red"></div>`);
+
+            // .container의 첫번째 자식으로 추가
+            $(".container").prepend(`<div class="box red"></div>`);
+
+            // .container의 앞 형제로 추가
+            $(".container").before(`<div class="box red"></div>`);
+
+            // .container의 뒤 형제로 추가
+            $(".container").after(`<div class="box red"></div>`);
+        }
+
+        function useRemove() {
+            $(".box.orange").remove(); // 자주쓰임!!!!
+
+            // const container = document.querySelector(".container");
+            // container.innerHTML = "";
+            // .container의 내용을 비우겠다.
+            $(".container").empty();
+        }
+
+        function useParent() {
+            // parent()
+            console.log("parent", $(".box.red").parent())
+            // parents()
+            console.log("parents", $(".box.red").parents())
+            // next()
+            console.log("next", $(".box.red").next())
+            // prev()
+            console.log("prev", $(".box.orange").prev())
+            // children()
+            console.log("children", $(".container").children())
+        }
+
+        // 자주쓰임!!!!
+        function controlClass() {
+            const redBox = $("#red")
+            // if(redBox.hasClass("red")) redBox.removeClass("red");
+            // else redBox.addClass("red");
+            redBox.toggleClass("red");
+        }
 
     </script>
 </body>
