--- a/htmlCssJs/test/html/16_js_dom_test2.html
+++ b/htmlCssJs/test/html/16_js_dom_test2.html
@@ -22,6 +22,10 @@
                 <th>작성일</th>
             </tr>
         </thead>
+        <tbody>
+
+        </tbody>
+
     </table>
 
     <script>
