--- a/htmlCssJs/html/17_jquery.html
+++ b/htmlCssJs/html/17_jquery.html
@@ -148,6 +148,14 @@
             redBox.toggleClass("red");
         }
 
+        document.getElementById("아이디") // 하나만 선택
+        document.querySelector("선택자") // 하나만 선택
+        //이 외의 선택자는 여러개 선택, 무조건 하나만 여러개면 인덱싱 타고 들어가야 한다. 제이쿼리는 무조건 여러개 모두 다 .
+
+        $("선택자").append("") //요소 추가 가능
+
+
+
     </script>
 </body>
 </html>
