--- a/htmlCssJs/test/html/20_media_test2.html
+++ b/htmlCssJs/test/html/20_media_test2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>header 만들기 실습</title>
+    <title>Document</title>
     <script
       src="https://kit.fontawesome.com/837ff3adc1.js"
       crossorigin="anonymous"
@@ -29,8 +29,7 @@
         width: 100%;
         height: var(--nav-height-lg);
         z-index: 100;
-        position: fixed;
-        text-align: center;
+        /* position: fixed; */
       }
 
       /* 768px 보다 클때의 header */
@@ -38,8 +37,6 @@
         background-color: lightblue;
         height: 100%;
         display: flex;
-        justify-content: space-between;
-        padding: 20px 100px;
       }
 
       /* LOGO */
@@ -50,17 +47,22 @@
 
       header .inner .menu {
         display: flex;
-
+        justify-content: center;
       }
 
       header .inner .menu li {
-        padding: 8px 30px;
+        margin: 10px;
       }
 
       /* 미디어 쿼리 작성 768px 이하일 때  */
-      @media screen and (max-width: 768px){
 
-        }
+
+
+
+
+
+
+
     </style>
   </head>
   <body>
